--- a/src/assets/styles/SelectButton.module.css
+++ b/src/assets/styles/SelectButton.module.css
@@ -1,5 +1,7 @@
 .btn {
+  font-family: 'Noto Sans KR', sans-serif;
   width: 300px;
+  letter-spacing: 0.1em;
   font-weight: 300;
   margin: 0 auto;
   display: flex;
